<resources>
    <string name="app_name">Zaebumba</string>
    <string name="raschet">Расчет</string>
    <string name="nachat">Начать</string>
    <string name="dly_dvuhtaktnyh">для двухтактных</string>
    <string name="dvigateley">двигателей</string>
    <string name="toplivnoy">топливной смеси</string>
    <string name="kolichestvo">Количество бензина :</string>
    <string name="_1_25_1_30_1_32_1_50">(Например: 1:25, 1:30, 1:32, 1:50 и т.д.)</string>
    <string name="_25">25</string>
    <string name="_1">1:</string>
    <string name="vash_variant">или Ваш вариант :</string>
    <string name="ukazhite">Укажите</string>
    <string name="proporciu">пропорцию смеси</string>
    <string name="_1000">1000</string>
    <string name="vmilillitrah">(в миллилитрах)</string>
    <string name="button_raschet">Расчет</string>
    <string name="_1_25">1:25</string>
    <string name="_1_30">1:30</string>
    <string name="_1_40">1:40</string>
    <string name="_1_50">1:50</string>
    <string name="maslo">Масло</string>
    <string name="proporciya">Пропорция</string>
    <string name="benzin">Бензин</string>
    <string name="ml">мл</string>
    <string name="mlb">мл</string>
</resources>
