<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="56dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_30"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/ukazhite"
        android:textColor="#ffffff"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proporciu"
        android:textColor="#ffffff"
        android:textSize="28sp" />

    <ImageView
        android:id="@+id/luch3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:src="@drawable/luch"
        tools:ignore="ContentDescription" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_button_1_25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center"
            android:tag="25"
            android:text="@string/_1_25"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_button_1_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center"
            android:tag="30"
            android:text="@string/_1_30"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_button_1_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center"
            android:tag="40"
            android:text="@string/_1_40"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_button_1_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center"
            android:tag="50"
            android:text="@string/_1_50"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </RadioGroup>

    <ImageView
        android:id="@+id/luch1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:src="@drawable/luch"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/vash_variant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/vash_variant"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />

    <RelativeLayout
        android:id="@+id/yourchois"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/editSmes"
            android:text="@string/_1"
            android:textColor="#ffffff"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/editSmes"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#ffffff"
            android:gravity="center_horizontal"
            android:hint="@string/_25"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="Autofill,LabelFor" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/kolichestvo"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vmilillitrah"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editBenz"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:hint="@string/_1000"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:ignore="Autofill,LabelFor">

        <requestFocus></requestFocus>
    </EditText>

    <Button
        android:id="@+id/расчет"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/mybutton"
        android:onClick="onClick"
        android:text="@string/button_raschet"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/llbottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/maslo"
                android:textColor="#BF360C"
                android:textSize="22sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/maslenka2"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/result_oil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text=""
                android:textColor="@color/radiorgroup_no_checked"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/ml"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/ml"
                android:textColor="@color/radiorgroup_no_checked"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/result_proporciya"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:textColor="#ffffff"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/benzin"
                android:textColor="#FFCA28"
                android:textSize="22sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/kanistra"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/result_gasoline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text=""
                android:textColor="#FFCA28"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/mll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/mlb"
                android:textColor="#FFCA28"
                android:textSize="22sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
